<resources>
    <string name="app_name">ShakeIt</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="b_agregar">Agregar</string>
    <string name="b_borrar">Borrar</string>
    <string name="b_borrarTodo">Borrar Todo</string>
    <string name="l_lista">Listado</string>
    <string name="l_itemShake">Item Shake</string>
    <string name="title_activity_shake">ShakeActivity</string>
    <string name="title_activity_splash">SplashActivity</string>

</resources>
