<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_item"
            android:layout_row="1"
            android:layout_column="1"
            android:hint="Agregar Item"
            android:layout_margin="8dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/l_itemShake"
            android:id="@+id/textView2"
            android:layout_row="0"
            android:layout_column="1"
            android:layout_gravity="center_horizontal"
            android:singleLine="false"
            android:password="false"
            android:phoneNumber="false"
            android:textStyle="bold"
            android:typeface="normal"
            android:layout_margin="8dp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/b_agregar"
            android:id="@+id/button"
            android:layout_row="2"
            android:layout_column="1" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/b_borrar"
            android:id="@+id/button2"
            android:layout_row="3"
            android:layout_column="1" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/b_borrarTodo"
            android:id="@+id/button3"
            android:layout_row="4"
            android:layout_column="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/l_lista"
            android:id="@+id/textView"
            android:layout_row="5"
            android:layout_column="1"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal"
            android:layout_margin="8dp" />

        <ListView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/list_items"
            android:layout_row="6"
            android:layout_column="1"
            android:layout_gravity="center_horizontal" />
    </GridLayout>
</RelativeLayout>
